--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@rive-app/react-canvas": "^4.23.1",
+    "@rive-app/react-webgl": "^4.23.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
