--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build && electron-builder",
+    "build:pi": "tsc && vite build && electron-builder --linux --arm64",
+    "build:pi32": "tsc && vite build && electron-builder --linux --armv7l",
+    "build:windows": "tsc && vite build && electron-builder --windows",
+    "build:mac": "tsc && vite build && electron-builder --mac",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -31,5 +35,45 @@
     "vite-plugin-electron": "^0.28.6",
     "vite-plugin-electron-renderer": "^0.14.5"
   },
-  "main": "dist-electron/main.js"
+  "main": "dist-electron/main.js",
+  "build": {
+    "appId": "com.junctionrelay.electron",
+    "productName": "JunctionRelay",
+    "directories": {
+      "output": "dist",
+      "buildResources": "build"
+    },
+    "files": [
+      "dist/**/*",
+      "dist-electron/**/*",
+      "node_modules/**/*",
+      "public/**/*"
+    ],
+    "linux": {
+      "target": [
+        {
+          "target": "tar.gz",
+          "arch": ["arm64", "armv7l"]
+        },
+        {
+          "target": "AppImage",
+          "arch": ["arm64", "armv7l"]
+        }
+      ],
+      "category": "Utility",
+      "icon": "public/icon.png"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "public/icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "public/icon.icns"
+    },
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    }
+  }
 }
