--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "junctionrelay-electron",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -16,12 +16,17 @@
   "dependencies": {
     "@rive-app/react-canvas": "^4.23.1",
     "@rive-app/react-webgl": "^4.23.1",
+    "bonjour-service": "^1.3.0",
+    "bufferutil": "^4.0.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "utf-8-validate": "^6.0.5",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "@vitejs/plugin-react": "^4.2.1",
@@ -43,7 +48,7 @@
       "output": "dist",
       "buildResources": "build"
     },
-      "files": [
+    "files": [
       "dist/**/*",
       "dist-electron/**/*",
       "node_modules/**/*",
@@ -54,7 +59,6 @@
       "category": "Utility"
     },
     "win": {
-
       "target": "nsis",
       "icon": "public/icon.ico"
     },
