--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "junctionrelay-electron",
+  "name": "junctionrelay-virtualdevice",
   "private": true,
   "version": "0.1.3",
   "type": "module",
@@ -42,8 +42,8 @@
   },
   "main": "dist-electron/main.js",
   "build": {
-    "appId": "com.junctionrelay.electron",
-    "productName": "JunctionRelay",
+    "appId": "com.junctionrelay.virtualdevice",
+    "productName": "JunctionRelay_VirtualDevice",
     "directories": {
       "output": "dist",
       "buildResources": "build"
